--- a/New folder/index.html
+++ b/New folder/index.html
@@ -13,9 +13,6 @@
   </head>
 
   <body>
-    <script src="NeuroBuddy.js"></script>
-    <div></div>
-    
-    
+    <script src="sketch.js"></script>
   </body>
 </html>
